correct contacts section

--- a/css/styles.css
+++ b/css/styles.css
@@ -176,15 +176,15 @@ padding-bottom: 130px;
     background-color: transparent;
 }
 .section-contacts-icon-gps {
-    background-image: url("/img/gps.svg");
+    background-image: url("/img/gps.png");
 }
 
 .section-contacts-icon-phone {
-    background-image: url("/img/phone.svg");
+    background-image: url("/img/phone.png");
 }
 
 .section-contacts-icon-mail {
-    background-image: url("/img/mail.svg");
+    background-image: url("/img/mail.png");
     background-size: auto 19px;
 }
 
