--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,31 @@
+/* open-sans-300 - latin_cyrillic */
+@font-face {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 300;
+    src: local(''),
+         url('../fonts/open-sans-v18-latin_cyrillic-300.woff2') format("woff2"), /* Super Modern Browsers */
+         url('../fonts/open-sans-v18-latin_cyrillic-300.woff') format("woff"); /* Modern Browsers */
+  }
+  /* open-sans-regular - latin_cyrillic */
+  @font-face {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+         url('../fonts/open-sans-v18-latin_cyrillic-regular.woff2') format("woff2"), /* Super Modern Browsers */
+         url('../fonts/open-sans-v18-latin_cyrillic-regular.woff') format("woff"); /* Modern Browsers */
+  }
+  /* open-sans-600 - latin_cyrillic */
+  @font-face {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 600;
+    src: local(''),
+         url('../fonts/open-sans-v18-latin_cyrillic-600.woff2') format("woff2"), /* Super Modern Browsers */
+         url('../fonts/open-sans-v18-latin_cyrillic-600.woff') format("woff"); /* Modern Browsers */
+  }
+
 * {
     box-sizing: border-box;
 }
@@ -17,7 +45,7 @@ img {
 }
 
 html {
-    font-family: sans-serif;
+    font-family: "Open Sans";
 }
 
 .conteiner {
@@ -30,9 +58,10 @@ html {
 
 .btn {
     display: inline-block;
-    padding: 15px 16px;
+    padding: 15px 30px;
     line-height: 1;
     font-size: 16px;
+    font-weight: 600;
     text-transform: uppercase;
     color: #ffff;
     background-color: #3172b9;
@@ -40,27 +69,59 @@ html {
     cursor: pointer;
 }
 
+.btn.btn-big {
+    padding: 20px 60px;
+}
+
 .text-center {
     text-align: center;
+}
+
+.section-heading {
+    margin-top: 0;
+    margin-bottom: 25px;
+    font-size: 36px;
+    line-height: 1.3;
+    font-weight: 300;
+    color: #414141;
+}
+
+.section-description {
+    margin-top: 0;
+    font-size: 16px;
+    line-height: 1.31;
+    color: #787878;
 }
 
 /* Header*/
 .header {
     height: 110px;
+    border-bottom: 1px solid #e4e4e4;
 }
 
 .header-conteiner {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     height: 100%;
-}
-
-.logo {
-    margin-right: auto;
 }
 
 .nav-list {
     display: flex;
+    margin: auto;
+}
+
+.nav-item {
+font-size: 15px;
+line-height: 1;
+}
+
+.nav-link {
+    color: #1c1c1c;
+}
+
+.nav-item.is-active .nav-link {
+    color: #3172b9;
 }
 
 .nav-item:not(:last-child) {
@@ -68,10 +129,15 @@ html {
 }
 
 .header-btn {
-    margin-left: 80px;
+    margin-left: 40px;
 }
 
 /*Hero*/
+.section-hero{
+background: url("/img/Base.png") right center no-repeat white;
+background-size: contain;
+}
+
 .hero-conteiner {
 padding-top: 120px;
 padding-bottom: 130px;
@@ -82,21 +148,52 @@ padding-bottom: 130px;
 }
 
 .section-hero-heading {
-    margin-bottom: 20px;
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-size: 40px;
+    line-height: 52px;
+    font-weight: 300;
+    color: #1c1c1c;
+}
+
+.section-hero-action {
+    display: inline-block;
 }
 
 .section-hero-description {
-    margin-bottom: 30px;
+    margin-bottom: 33px;
+    font-size: 16px;
+    line-height: 25px;
+    color: #787878;
 }
 
 .section-hero-btn-description {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-top: 10px;
+    font-size: 11px;
+    line-height: 1;
+    text-transform: uppercase;
+    text-align: center;
+    color: #787878;
+}
+
+.section-hero-ssl-icon {
+    display: inline-block;
+    width: 13px;
+    height: 17px;
+    margin-right: 10px;
+    background: url("/img/Shield-icon.png") center center no-repeat transparent;
+    background-size: contain;
+    transform: translateY(-1px);
 }
 
 /*What We Do*/
 .section-do {
     padding-top: 140px;
     padding-bottom: 100px;
+    border-bottom: 1px solid #e4e4e4;
 }
 
 .section-description {
@@ -110,17 +207,48 @@ padding-bottom: 130px;
 
 .section-do-item {
     flex: 1 1 25%;
-    outline: 3px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 60px 30px;
+    border: 1px solid #e4e4e4;
+    border-radius: 5px;
+}
+
+.section-do-item-heading {
+    margin-bottom: 18px;
+    font-size: 20px;
+    line-height: 1;
+    font-weight: 600;
+    color: #1c1c1c;
+}
+
+.section-do-item-description {
+    margin-top: 0;
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 300;
+    text-align: center;
+    color: #787878;
 }
 
 .section-do-item:not(:last-child) {
     margin-right: 30px;
 }
 
+.section-do-icon {
+    margin-bottom: 30px;
+}
+
 /*Clients*/
 .section-clients {
     padding-top: 90px;
     padding-bottom: 100px;
+    border-bottom: 1px solid #e4e4e4;
+}
+
+.section-clients-heading {
+    margin-bottom: 45px;
 }
 
 .section-clients-list {
@@ -129,15 +257,45 @@ padding-bottom: 130px;
 
 .section-clients-item {
     flex: 1 1 33.33%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 50px 35px 30px;
+    border: 1px solid #e4e4e4;
+    border-radius: 5px;
 }
 
 .section-clients-item:not(:last-child) {
     margin-right: 30px;
 }
 
+.section-clients-testimonial {
+    margin-top: 0px;
+    margin-bottom: 35px;
+    font-size: 14px;
+    line-height: 25px;
+    font-weight: 300;
+    color: #787878;
+}
+
 .section-clients-user {
     display: flex;
     align-items: center;
+    padding-top: 28px;
+    border-top: 1px solid #e9e9e9;
+}
+
+.section-clients-username {
+    font-size: 17px;
+    line-height: 25px;
+    font-weight: 600;
+    color: #1c1c1c;  
+}
+
+.section-clients-user-description {
+    font-size: 14px;
+    line-height: 25px;
+    color: #787878;
 }
 
 .section-clients-avatar {
