modify style.css&added image files

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,7 @@ line-height: 1;
 
 /*Hero*/
 .section-hero{
-background: url("/img/Base.png") right center no-repeat white;
+background: url("/img/base.png") right center no-repeat white;
 background-size: contain;
 }
 
@@ -310,7 +310,9 @@ padding-bottom: 130px;
 .section-contacts {
     padding-top: 85px;
     padding-bottom: 95px;
+    border-bottom: 1px solid #e4e4e4;
 }
+
 .section-contacts-list {
     display: flex;
     margin-top: 43px;
@@ -322,6 +324,9 @@ padding-bottom: 130px;
 
 .section-contacts-info {
     max-width: 250px;
+    font-size: 14px;
+    line-height: 25px;
+    color: #787878;
 }
 
 .section-contacts-icon {
@@ -349,6 +354,13 @@ padding-bottom: 130px;
 .section-contacts-heading {
     display: block;
     margin-bottom: 40px;
+    font-size: 17px;
+    line-height: 1;
+    color: #1c1c1c;
+}
+
+.section-contacts-link {
+    color: #787878;
 }
 
 /*Footer*/
@@ -363,7 +375,8 @@ padding-bottom: 130px;
     height: 100%;
 }
 
-.footer-left {
+.footer-left,
+.footer-right {
     display: flex;
     align-items: center;
 }
@@ -372,10 +385,64 @@ padding-bottom: 130px;
     margin-right: 25px;
 }
 
+.footer-copyrights {
+    font-size: 12px;
+    line-height: 17px;
+    color: #787878;
+}
+
+.footer-nav {
+    margin-right: 55px;
+}
+
 .footer-nav-list {
     display: flex;
 }
 
+.footer-nav-item {
+    font-size: 14px;
+    line-height: 1;
+}
+
+.footer-nav-link {
+    color: #787878;
+}
+
 .footer-nav-item:not(:last-child) {
     margin-right: 35px;
+}
+
+.footer-social-list {
+    display: flex;
+    align-items: center;
+}
+
+.footer-social-item:not(:last-child) {
+margin-right: 30px;
+}
+
+.footer-social-icon {
+    display: inline-block;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    background-size: contain;
+    background-position: center center;
+}
+
+.footer-social-icon-twitter {
+    width: 18px;
+    height: 15px;
+    background-image: url("../img/twitter.png");
+}
+
+.footer-social-icon-linkedin {
+    width: 18px;
+    height: 19px;
+    background-image: url("../img/linkedin.png");
+}
+
+.footer-social-icon-email {
+    width: 24px;
+    height: 17px;
+    background-image: url("../img/email.png");
 }
